--- a/music-app/music-app/Controllers/Cells/TableViewCells/SongCell/SongCell.xib
+++ b/music-app/music-app/Controllers/Cells/TableViewCells/SongCell/SongCell.xib
@@ -29,19 +29,19 @@
                                 </constraints>
                             </imageView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="BeT-dM-iQ1">
-                                <rect key="frame" x="59.999999999999993" y="36.666666666666671" width="66.333333333333314" height="35.666666666666671"/>
+                                <rect key="frame" x="60" y="36.666666666666671" width="58.666666666666657" height="35.666666666666671"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="PXh-AX-P0S">
-                                        <rect key="frame" x="0.0" y="0.0" width="66.333333333333329" height="15"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="58.666666666666664" height="15"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IZE-Ag-XUY">
-                                                <rect key="frame" x="0.0" y="0.0" width="41.333333333333336" height="15"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="33.666666666666664" height="15"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="e.square.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="LfB-RT-C2A">
-                                                <rect key="frame" x="46.333333333333329" y="1.6666666666666643" width="15" height="12.000000000000004"/>
+                                                <rect key="frame" x="38.666666666666671" y="1.6666666666666643" width="15" height="12.000000000000004"/>
                                                 <color key="tintColor" systemColor="systemPurpleColor"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="15" id="DC1-q6-JUp"/>
@@ -50,13 +50,13 @@
                                                 </constraints>
                                             </imageView>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ky0-qi-vd7">
-                                                <rect key="frame" x="66.333333333333343" y="0.0" width="0.0" height="15"/>
+                                                <rect key="frame" x="58.666666666666671" y="0.0" width="0.0" height="15"/>
                                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             </view>
                                         </subviews>
                                     </stackView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oif-1w-8hE">
-                                        <rect key="frame" x="0.0" y="20.000000000000007" width="66.333333333333329" height="15.666666666666664"/>
+                                        <rect key="frame" x="0.0" y="20.000000000000007" width="58.666666666666664" height="15.666666666666664"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
@@ -64,11 +64,14 @@
                                 </subviews>
                             </stackView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="CRK-Yg-sQB">
-                                <rect key="frame" x="136.33333333333334" y="29.666666666666664" width="116" height="49.999999999999993"/>
+                                <rect key="frame" x="128.66666666666666" y="29.666666666666664" width="123.66666666666666" height="49.999999999999993"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                             </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="doh-w5-SHW">
                                 <rect key="frame" x="262.33333333333331" y="37.333333333333329" width="47.666666666666686" height="34.333333333333329"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="47.670000000000002" id="Qlp-dT-sLt"/>
+                                </constraints>
                                 <color key="tintColor" systemColor="labelColor"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" image="ellipsis" catalog="system"/>
@@ -82,7 +85,7 @@
                 <constraints>
                     <constraint firstItem="JLF-5r-a8R" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="Fq0-Le-rzi"/>
                     <constraint firstItem="JLF-5r-a8R" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="5" id="MZ8-5w-ANS"/>
-                    <constraint firstAttribute="trailing" secondItem="JLF-5r-a8R" secondAttribute="trailing" constant="5" id="dBk-uF-pEd"/>
+                    <constraint firstAttribute="trailing" secondItem="JLF-5r-a8R" secondAttribute="trailing" constant="5" id="Q2b-hh-GuE"/>
                     <constraint firstAttribute="bottom" secondItem="JLF-5r-a8R" secondAttribute="bottom" constant="10" id="ykI-fc-pEF"/>
                 </constraints>
             </tableViewCellContentView>
