--- a/music-app/music-app/Controllers/Cells/CollectionViewCells/RecentlyAddedCell/RecentlyAddedCell.xib
+++ b/music-app/music-app/Controllers/Cells/CollectionViewCells/RecentlyAddedCell/RecentlyAddedCell.xib
@@ -23,7 +23,7 @@
                             <constraint firstAttribute="width" secondItem="gyY-ox-iga" secondAttribute="height" multiplier="1:1" id="q1S-5a-NC9"/>
                         </constraints>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AZe-0t-Uoq">
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Artist" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AZe-0t-Uoq">
                         <rect key="frame" x="10" y="191" width="150" height="18"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="18" id="wV9-Rk-LEv"/>
@@ -32,7 +32,7 @@
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bsE-QV-GHN">
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bsE-QV-GHN">
                         <rect key="frame" x="10" y="165" width="150" height="21"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="21" id="Q42-Iu-wKn"/>
