--- a/music-app/music-app/Controllers/Cells/TableViewCells/LibrarySection/LibraryArtistCell/LibraryArtistCell.xib
+++ b/music-app/music-app/Controllers/Cells/TableViewCells/LibrarySection/LibraryArtistCell/LibraryArtistCell.xib
@@ -28,14 +28,14 @@
                                     <constraint firstAttribute="height" constant="50" id="jhB-eK-PYc"/>
                                 </constraints>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qfj-iu-yaI">
-                                <rect key="frame" x="60" y="25.333333333333336" width="41.333333333333343" height="20.333333333333336"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Artist" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qfj-iu-yaI">
+                                <rect key="frame" x="60" y="25.333333333333336" width="41" height="20.333333333333336"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="udq-iH-eoT">
-                                <rect key="frame" x="111.33333333333333" y="10.666666666666671" width="148.66666666666669" height="50"/>
+                                <rect key="frame" x="111" y="10.666666666666671" width="149" height="50"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                             </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3Om-eM-JZA">
