--- a/music-app/music-app/Controllers/Cells/TableViewCells/LibrarySection/LibraryPlaylistCell/LibraryPlaylistCell.xib
+++ b/music-app/music-app/Controllers/Cells/TableViewCells/LibrarySection/LibraryPlaylistCell/LibraryPlaylistCell.xib
@@ -28,14 +28,14 @@
                                     <constraint firstAttribute="width" secondItem="S0g-NS-7Nt" secondAttribute="height" multiplier="1:1" id="VRO-fS-jyj"/>
                                 </constraints>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="euc-vg-IxM">
-                                <rect key="frame" x="109.99999999999999" y="84" width="41.333333333333329" height="20.333333333333329"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Playlist" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="euc-vg-IxM">
+                                <rect key="frame" x="110.00000000000001" y="84" width="53.666666666666671" height="20.333333333333329"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="e.square.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="gcI-iY-K65">
-                                <rect key="frame" x="161.33333333333334" y="88.333333333333343" width="15" height="12"/>
+                                <rect key="frame" x="173.66666666666666" y="88.333333333333343" width="15" height="12"/>
                                 <color key="tintColor" systemColor="systemPurpleColor"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="gcI-iY-K65" secondAttribute="height" multiplier="1:1" id="4sR-Xu-XL1"/>
@@ -44,7 +44,7 @@
                                 </constraints>
                             </imageView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="t9F-Bn-BC3">
-                                <rect key="frame" x="186.33333333333334" y="30" width="63.666666666666657" height="128"/>
+                                <rect key="frame" x="198.66666666666666" y="30" width="51.333333333333343" height="128"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                             </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qja-xx-tuJ">
