--- a/music-app/music-app/Controllers/Cells/TableViewCells/LibrarySection/LibraryTrackCell/LibraryTrackCell.xib
+++ b/music-app/music-app/Controllers/Cells/TableViewCells/LibrarySection/LibraryTrackCell/LibraryTrackCell.xib
@@ -34,14 +34,14 @@
                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="QkQ-0H-VFJ">
                                         <rect key="frame" x="0.0" y="0.0" width="101.33333333333333" height="15"/>
                                         <subviews>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4JX-AA-FCr">
-                                                <rect key="frame" x="0.0" y="0.0" width="41.333333333333336" height="15"/>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4JX-AA-FCr">
+                                                <rect key="frame" x="0.0" y="0.0" width="33" height="15"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="e.square.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="wuA-sg-g0o">
-                                                <rect key="frame" x="46.333333333333329" y="1.6666666666666643" width="15" height="12.000000000000004"/>
+                                                <rect key="frame" x="38" y="1.6666666666666643" width="15" height="12.000000000000004"/>
                                                 <color key="tintColor" systemColor="systemPurpleColor"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" secondItem="wuA-sg-g0o" secondAttribute="height" multiplier="1:1" id="80v-Rr-4w8"/>
@@ -50,12 +50,12 @@
                                                 </constraints>
                                             </imageView>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wL1-gy-irS">
-                                                <rect key="frame" x="66.333333333333329" y="0.0" width="35" height="15"/>
+                                                <rect key="frame" x="58" y="0.0" width="43.333333333333343" height="15"/>
                                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                             </view>
                                         </subviews>
                                     </stackView>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Sza-mT-ujr">
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Artist" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Sza-mT-ujr">
                                         <rect key="frame" x="0.0" y="19.999999999999996" width="101.33333333333333" height="15.666666666666668"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                         <nil key="textColor"/>
