--- a/music-app/music-app/Controllers/ViewControllers/AddPlaylistController/AddPlaylistController.xib
+++ b/music-app/music-app/Controllers/ViewControllers/AddPlaylistController/AddPlaylistController.xib
@@ -12,8 +12,12 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="AddPlaylistController" customModule="music_app" customModuleProvider="target">
             <connections>
                 <outlet property="addImageView" destination="Nju-ek-0OO" id="qP2-c4-Lxp"/>
+                <outlet property="addTracksButton" destination="KKu-n5-oej" id="eCJ-ld-fSp"/>
+                <outlet property="cancelButton" destination="6b9-jq-sLd" id="Ynl-Oc-3i4"/>
+                <outlet property="doneButton" destination="sxD-8h-mta" id="vTp-8F-6UW"/>
                 <outlet property="playlistImageView" destination="l6W-Pq-Ehh" id="Q5A-A9-c2N"/>
                 <outlet property="playlistNameTextField" destination="5B9-QI-0ZE" id="btB-eB-HZz"/>
+                <outlet property="titleLabel" destination="I4Y-SQ-Dsg" id="dbM-hz-WFB"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -23,7 +27,7 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" translatesAutoresizingMaskIntoConstraints="NO" id="lL8-3W-X5W">
-                    <rect key="frame" x="0.0" y="75" width="393" height="34.333333333333343"/>
+                    <rect key="frame" x="0.0" y="16" width="393" height="34.333333333333343"/>
                     <subviews>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6b9-jq-sLd">
                             <rect key="frame" x="0.0" y="0.0" width="76.666666666666671" height="34.333333333333336"/>
@@ -52,16 +56,16 @@
                     </subviews>
                 </stackView>
                 <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter playlist name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="5B9-QI-0ZE">
-                    <rect key="frame" x="16" y="341.33333333333331" width="361" height="34"/>
+                    <rect key="frame" x="16" y="282.33333333333331" width="361" height="34"/>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <textInputTraits key="textInputTraits"/>
                 </textField>
                 <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="v6J-X7-EZN">
-                    <rect key="frame" x="0.0" y="425.66666666666674" width="393" height="392.33333333333326"/>
+                    <rect key="frame" x="0.0" y="366.66666666666674" width="393" height="485.33333333333326"/>
                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                 </tableView>
                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="music.note.list" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="l6W-Pq-Ehh">
-                    <rect key="frame" x="96.666666666666686" y="126.33333333333333" width="200" height="198.66666666666669"/>
+                    <rect key="frame" x="96.666666666666686" y="67.333333333333329" width="200" height="198.66666666666669"/>
                     <color key="tintColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
                         <constraint firstAttribute="width" secondItem="l6W-Pq-Ehh" secondAttribute="height" multiplier="1:1" id="U52-t1-9LJ"/>
@@ -70,7 +74,7 @@
                     </constraints>
                 </imageView>
                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="plus.app.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="Nju-ek-0OO">
-                    <rect key="frame" x="161.66666666666666" y="192" width="70" height="67"/>
+                    <rect key="frame" x="161.66666666666666" y="133" width="70" height="67"/>
                     <color key="tintColor" systemColor="labelColor"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="70" id="Dsl-FH-DXm"/>
@@ -79,7 +83,7 @@
                     </constraints>
                 </imageView>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KKu-n5-oej">
-                    <rect key="frame" x="16" y="391.33333333333331" width="361" height="34.333333333333314"/>
+                    <rect key="frame" x="16" y="332.33333333333331" width="361" height="34.333333333333314"/>
                     <color key="tintColor" systemColor="systemPurpleColor"/>
                     <state key="normal" title="Button"/>
                     <buttonConfiguration key="configuration" style="plain" title="Add tracks" imagePadding="5">
