--- a/music-app/music-app/Controllers/Cells/TableViewCells/LibrarySection/LibraryTrackCell/LibraryTrackCell.xib
+++ b/music-app/music-app/Controllers/Cells/TableViewCells/LibrarySection/LibraryTrackCell/LibraryTrackCell.xib
@@ -51,7 +51,7 @@
                                             </imageView>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wL1-gy-irS">
                                                 <rect key="frame" x="58" y="0.0" width="43.333333333333343" height="15"/>
-                                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             </view>
                                         </subviews>
                                     </stackView>
